--- a/style.css
+++ b/style.css
@@ -1,3 +1,99 @@
-h1{
-    color: blue;
+/* v2 */
+@font-face {
+    font-family: 'Geomanist Book';
+    src: url(fonts/geomanist/hinted-Geomanist-Book.eot);
+    src: url(fonts/geomanist/hinted-Geomanist-Book.eot?#iefix) format('embedded-opentype'),url(../fonts/geomanist/hinted-Geomanist-Book.woff2) format('woff2'),url(../fonts/geomanist/hinted-Geomanist-Book.woff) format('woff'),url(../fonts/geomanist/hinted-Geomanist-Book.ttf) format('truetype'),url(../fonts/geomanist/hinted-Geomanist-Book.svg#Geomanist-Book) format('svg');
+    font-weight: 400;
+    font-style: normal
 }
+
+body {
+    padding-bottom: 20px;
+    /* background-color: rgb(145, 100, 41); */
+    color:black;
+    font-size: 20px;
+}
+
+/* Wrapping element */
+/* Set some basic padding to keep content from hitting the edges */
+.body-content {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+/* Set widths on the form inputs since otherwise they're 100% wide */
+input,
+select,
+textarea {
+    max-width: 280px;
+}
+
+
+/* Responsive: Portrait tablets and up */
+@media screen and (min-width: 768px) {
+    .body-content {
+        padding: 0;
+    }
+}
+
+/* v2 */
+
+/* .jumbotron {
+    font-family: 'Geomanist Book';
+    background-color:lightcoral;
+} */
+
+h1, h2 {
+    font-family: 'Geomanist Book';
+    text-align: center;
+}
+
+
+body {
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 11px;
+    line-height: 30px;
+    color: #777;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    background-image: url("5.png");
+    /*background-size: 100%;*/
+  }
+  
+  /* general */
+  
+  .container {
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    clear: both;
+  }
+  
+  /* header */
+  #masthead {
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    margin: 0 0 30px;
+    overflow: auto;
+    color: #fff;
+    background: #fff;
+    border-bottom: 2px solid #ccc;
+  }
+  
+  nav {
+    float: center;
+  }
+  
+  nav a {
+    display: inline-block;
+    /* padding: left 100px; */
+    margin-left: 100px;
+    line-height: 20px;
+    color: #999;
+    text-decoration: none;
+    border-left: 3px solid red;
+  }
